--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "less": "^4.4.1",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-element-plus-x": "^1.3.7",
